Clean stuff and fix java8 compatible